# forti-hole

./: .env.example  .gitignore  README.md  build.sh  conanfile.py  config.example.yaml  config.yaml  main.cpp  meson.build
.github/workflows/: release.yml
include/: FortiThreatFeedManager.h  Scraper.h  Task.h  TaskWrapper.h  ThreadPool.h  blocklist_scraper.h  config.h  forti_hole.h
install/: forti-hole-5am.timer  forti-hole.service
src/: FortiThreatFeedManager.cpp  Scraper.cpp  TaskWrapper.cpp  ThreadPool.cpp  blocklist_scraper.cpp  forti_hole.cpp
tests/: TestScraper.cpp  test_forti-hole.cpp  test_scraper.cpp
